text search works for user acounts
